# Traffic-light-monitoring

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/edu/nwpu/cmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/edu/nwpu/cmake/: MainActivity.java  SecondActivity.java  ThirdActivity.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_third.xml
app/src/main/res/menu/: main.xml
app/src/main/res/raw/: xml.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/cn/edu/nwpu/cmake/: ExampleUnitTest.java
openCVLibrary2411/: build.gradle
